--- a/style.css
+++ b/style.css
@@ -549,53 +549,91 @@ nav>.container-fluid>.bar {
 /* Footer style start */
 #footer {
     background: #222222;
+    color: #a9a9a9;
 }
-
-#footer>.footer {
-    color: rgb(99, 99, 99);
-    padding: 50px;
-    font-weight: 600;
-}
-
-#footer>.footer>.footercontent {
+#footer>.container {
     display: flex;
-    border-bottom: 1px solid white;
+    flex-direction: row;
 }
-
-#footer>.footer>.footercontent>div {
+#footer>.container>.coffeaddress {
+ flex: 1;
+}
+#footer>.container>.coffeefooterlink {
     flex: 2;
-    padding: 0 50px;
+    display: flex;
 }
-
-#footer>.footer>.footercontent>div {
-    flex: 2;
-    padding: 0 50px;
-}
-
-#footer>.footer>.footercontent>.Facility1 {
+#footer>.container>.coffeefooterlink>div {
+    padding: 10px;
     flex: 1;
-    padding: 0 50px;
 }
-
-#footer>.footer>.footercontent>.Facility2 {
-    flex: 1;
-    padding: 0 50px;
+#footer>.container>.coffeefooterlink>div>li>span {
+    color: white;
 }
-
-#footer>.footer>.footercontent>.Support {
-    flex: 1;
-    padding: 0 50px;
-}
-
-#footer>.right {
-    text-align: center;
-    padding: 10px 0;
-}
-
 /* Footer style end */
 
+
 /* All Media Query Start*/
+@media screen and (max-width:992px) {
+    #review>div>.reviewtext {
+        padding: 0 50px !important;
+    }
+    #coffee>div>p {
+        width: 60% !important;
+    }
+}
+@media (max-width:980px) {
+    #review>div {
+        padding: 0px;
+    }
+
+    #review>div>.reviewtext {
+        padding: 0px;
+    }
+
+    #review>div>.reviewslider {
+        width: 100%;
+    }
+
+    #coffee>div>p {
+        width: 60%;
+    }
+}
+@media (max-width:900px) {
+    #menu>.container-fluit>.tbl>ul {
+        width: 65%;
+    }
+    #menu .container-fluit .tbl .tbltime {
+        width: 35%;
+    }
+    #review>div>.reviewtext {
+        padding: 0;
+    }
+    #coffee>div>p {
+        width: 50%;
+    }
+}
+@media (max-width:800px) {
+}
+@media (max-width:798px) {
+}
 @media (max-width:768px) {}
+
+@media (max-width:600px) {}
+@media (max-width:624px) {
+
+    #about .aboutcontaint {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    #about .aboutcontaint>ul {
+        justify-content: center;
+    }
+    #footer>.container {
+        flex-direction: column;
+    }
+}
 
 @media (max-width:576px) {
     nav>.container-fluid>ul {
@@ -688,10 +726,6 @@ nav>.container-fluid>.bar {
         padding: 0;
     }
 
-    #review>div>.reviewtext {
-        padding: 0;
-    }
-
     #coffee>div>p {
         width: 100%;
     }
@@ -707,121 +741,10 @@ nav>.container-fluid>.bar {
     /* Review Style End */
 
     /* Footer style Start */
-    #footer>.footer {
-        padding: 50px 0;
-    }
-
-    /* #footer>.footer>.footercontent {
-        flex-wrap: wrap;
-
-    } */
-
-    #footer>.footer>.footercontent>.Facility1>h5 {
-        border-bottom: 2px solid white;
-        padding: 10px 0;
-    }
-
-    #footer>.footer>.footercontent>.Facility2>h5 {
-        border-bottom: 2px solid white;
-        padding: 10px 0;
-    }
-
-    #footer>.footer>.footercontent>.Support>h5 {
-        border-bottom: 2px solid white;
-        padding: 10px 0;
-    }
-
     /* Footer style End */
 }
 
-@media (max-width:980) {
-    #review>div {
-        padding: 0px;
-    }
-
-    #review>div>.reviewtext {
-        padding: 0px;
-    }
-
-    #review>div>.reviewslider {
-        width: 100%;
-    }
-
-    #coffee>div>p {
-        width: 60%;
-    }
-
-    #footer>.footer>.footercontent>div {
-        padding: 0 20px;
-    }
-
-    #footer>.footer>.footercontent>div {
-        padding: 0 20px;
-    }
-
-    #footer>.footer>.footercontent>.Facility1 {
-        padding: 0 20px;
-    }
-
-    #footer>.footer>.footercontent>.Facility2 {
-        padding: 0 20px;
-    }
-
-    #footer>.footer>.footercontent>.Support {
-        padding: 0 20px;
-    }
-}
-
-@media (max-width:900) {
-    #menu>.container-fluit>.tbl>ul {
-        width: 65%;
-    }
-    #menu .container-fluit .tbl .tbltime {
-        width: 35%;
-    }
-    #review>div>.reviewtext {
-        padding: 0;
-    }
-    #coffee>div>p {
-        width: 50%;
-    }
-    /* #footer>.footer>.footercontent {
-        flex-wrap: wrap;
-    } */
-}
-@media (max-width:800) {
-    /* #footer>.footer>.footercontent {
-        flex-wrap: wrap;
-    } */
-}
-@media (max-width:798) {
-    /* #footer>.footer>.footercontent {
-        flex-wrap: wrap;
-    } */
-}
-
-@media (max-width:624) {
-    /* #footer>.footer>.footercontent {
-        flex-wrap: wrap;
-    } */
-
-    #about .aboutcontaint {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-    #about .aboutcontaint>ul {
-        justify-content: center;
-    }
-}
-
-@media screen and (max-width:1020) {
-    #footer>.footer>.footercontent {
-        /* display: flex;
-        flex-wrap: wrap !important; */
-        flex-direction: column;
-    }
+@media screen and (min-width:250px) {
 }
 /* @media (max-width:768px) {
     
